--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <img data-aos="new-animation" src="img/gifs/rodney.png" alt="The example image should display" title="Example of brushwork in Tahoma2D by Rodney" style="max-width: 800px;">
                 <img data-aos="new-animation" src="img/screenshots/brushs.png" alt="The example image should display" title="Example of brushes in Tahoma2D" style="max-width: 442px;">
                 <figcaption data-aos="new-animation">
-                    A variety of brushes for different tastes
+                    A variety of brushes for different tastes and new style management options
                 </figcaption>
             </figure>
             <figure id="palette">
@@ -190,13 +190,17 @@
             <ul class="marker">
                 <li data-aos="new-animation" class="nomarker bold">Tahoma2D's unique features:</li>
                 <li data-aos="new-animation">The simplified workspace</li>
+                <li data-aos="new-animation">Style Set management*</li>
                 <li data-aos="new-animation">Easier project management</li>
+                <li data-aos="new-animation">Implicit holds* - images automatically hold their display until the next image, until the hold is ended, or until the scene ends</li>
+                <li data-aos="new-animation">Perspective Grid Tool* - for precision drawing</li>
+                <li data-aos="new-animation">Referenced fills* - fill while referencing other layers as part of the fill boundaries</li>
                 <li data-aos="new-animation">Rhubarb Lip Sync integration for automatic lip syncing</li>
-                <li data-aos="new-animation">Perspective guides and grids for precision drawing</li>
                 <li data-aos="new-animation">A status bar with helpful hints for new users</li>
                 <li data-aos="new-animation">No additional libraries needed to export in common formats like mp4 and gif</li>
                 <li data-aos="new-animation">Support for Canon DSLR cameras on macOS - not just Windows</li>
                 <li data-aos="new-animation">And many more small quality of life improvements</li>
+                <span class="note">* New in 1.3</span>
             </ul>
         </section>
         <section id="faq">
